Added clearfix to leaderboard tabs

--- a/pageroot/templates/leagueDetailsPageTemplate.html
+++ b/pageroot/templates/leagueDetailsPageTemplate.html
@@ -22,7 +22,7 @@
 </div>
 
 <div class="centerbox" style="margin-top:10px;">
-	<div class="tabbuttonholder">
+	<div class="tabbuttonholder clearfix">
 		<ul class="list-inline">
 			<li>
 				<a ng-click="tab='leaderboard'" ng-class="{tab=='leaderboard':selected}">Ledartavla</a>
