--- a/pageroot/templates/leagueDetailsPageTemplate.html
+++ b/pageroot/templates/leagueDetailsPageTemplate.html
@@ -79,6 +79,8 @@
 			<div class="chart-top">
 				<p>Poängkurva</p>
 			</div>
+			
+			<div google-chart chart="chartObject" style="{{cssStyle}}"></div>
 		</div>
 	</div>
 </div>
