--- a/pageroot/templates/leagueDetailsPageTemplate.html
+++ b/pageroot/templates/leagueDetailsPageTemplate.html
@@ -80,7 +80,7 @@
 				<p>Poängkurva</p>
 			</div>
 			
-			<div google-chart chart="chartObject" style="{{cssStyle}}"></div>
+			<div google-chart chart="chartObject" class="scorechart"></div>
 		</div>
 	</div>
 </div>
