Changed league details to dynamic values and changed to fixed layout width

--- a/pageroot/css/league.css
+++ b/pageroot/css/league.css
@@ -4,6 +4,10 @@
 	background-color:#707969;	
 }
 
+#infobox-container .container {
+	width:1024px;
+}
+
 .infobox{
 	 -webkit-transition:all linear 0.5s;
 	transition:all linear 0.5s;
