--- a/pageroot/templates/leagueDetailsPageTemplate.html
+++ b/pageroot/templates/leagueDetailsPageTemplate.html
@@ -2,13 +2,14 @@
 	<div class="centerbox">
 		<div class="container">
 			<div class="row infobox" ng-class="{minimized:minimized}">
-				<div class="col-md-8">
-					<h1>40k ligan v15</h1>
-					<p>2015-01-01 och framåt</p>
-					<p>En kul liga för våra medlemmar</p>
+				<div class="col-xs-8">
+					<h1>{{league.Name}}</h1>
+					<p ng-show="league.EndDate">{{league.StartDate}} till {{league.EndDate}}</p>
+					<p ng-hide="league.EndDate">{{league.StartDate}} och framåt</p>
+					<p>{{league.Description}}</p>
 				</div>
 				
-				<div class="col-md-4">
+				<div class="col-xs-4">
 					<a href="#/league/1/reportmatch">Raportera Match</a>
 				</div>
 			</div>
