--- a/pageroot/css/page.css
+++ b/pageroot/css/page.css
@@ -1,6 +1,13 @@
 * {
   margin: 0;
 }
+
+/* Force display of vertical scrollbar! */
+html {
+	overflow-y: scroll;
+	overflow: -moz-scrollbars-vertical;
+}
+
 html, body {
   height: 100%;
   padding:10px 0 0 0;
