League details style changes

--- a/pageroot/templates/leagueDetailsPageTemplate.html
+++ b/pageroot/templates/leagueDetailsPageTemplate.html
@@ -34,7 +34,7 @@
 		</ul>
 	</div>
 	<div style="clear:both;"></div>
-	<div ng-switch on="tab">
+	<div ng-switch on="tab" style="margin-bottom:20px;">
 		<div ng-switch-default class="leaderboard">
 			<!-- Leaderboard -->
 			
