Added league report match page with link

--- a/pageroot/templates/leagueDetailsPageTemplate.html
+++ b/pageroot/templates/leagueDetailsPageTemplate.html
@@ -10,7 +10,7 @@
 				</div>
 				
 				<div class="col-xs-4">
-					<a href="#/league/1/reportmatch">Raportera Match</a>
+					<a href="#/leagues/{{league.leagueId}}/reportmatch">Raportera Match</a>
 				</div>
 			</div>
 		</div>
