Added loading directive

--- a/pageroot/templates/leagueReportMatchTemplate.html
+++ b/pageroot/templates/leagueReportMatchTemplate.html
@@ -38,6 +38,6 @@
 	</form>
 </div>
 
-<div class="centerbox" ng-hide="auth">
-	Laddar...
+<div class="centerbox" ng-hide="auth" style="margin-top:20px;">
+	<loading>Kontrollerar användarinfo...</loading>
 </div>
