Report league match now checks auth with server

--- a/pageroot/templates/leagueReportMatchTemplate.html
+++ b/pageroot/templates/leagueReportMatchTemplate.html
@@ -1,6 +1,6 @@
 <div class="centerbox" style="margin-top:20px;" ng-show="auth">
 	<div class="jumbotron">
-		<h2>Välkommen {{auth.Username}}, hur gick matchen?</h2>
+		<h2>Välkommen {{auth.user}}, hur gick matchen?</h2>
 	</div>
 	
 	<form role="form" ng-submit="reportMatch()">
