Renamed Date to MatchDate

--- a/pageroot/templates/leagueReportMatchTemplate.html
+++ b/pageroot/templates/leagueReportMatchTemplate.html
@@ -21,7 +21,7 @@
 				<span class="input-group-addon">
 					<span class="glyphicon glyphicon-calendar"></span>
 				</span>
-				<input type="text" class="form-control" ng-model="match.Date" readonly required>
+				<input type="text" class="form-control" ng-model="match.MatchDate" readonly required>
 			</div>
 		</div>
 		
