--- a/pageroot/css/page.css
+++ b/pageroot/css/page.css
@@ -15,6 +15,15 @@ html, body {
   font-size: 13px;
 }
 
+/* 
+  Allow angular.js to be loaded in body, hiding cloaked elements until 
+  templates compile.  The !important is important given that there may be 
+  other selectors that are more specific or come later and might alter display.  
+ */
+[ng\:cloak], [ng-cloak], .ng-cloak {
+  display: none !important;
+}
+
 img {
 	border:0;
 }
