Changed 'league' to 'leagues' in anuglar path reference

--- a/pageroot/templates/leagueReportMatchTemplate.html
+++ b/pageroot/templates/leagueReportMatchTemplate.html
@@ -54,7 +54,7 @@
 	<div ng-show="saving == '2'">
 		<h1>Matchen sparad!</h1>
 		<p>
-			<a href="#/league/{{leagueId}}">Återgår</a> om 2 sekunder
+			<a href="#/leagues/{{leagueId}}">Återgår</a> om 2 sekunder
 		</p>
 	</div>
 </div>
