--- a/pageroot/templates/startPageTemplate.html
+++ b/pageroot/templates/startPageTemplate.html
@@ -1,7 +1,8 @@
 <div id="slidecontainer">
 	<div class="centerbox" id="slidecenter">
 		<bg-video videos="videos"></bg-video>
-		<ul rn-carousel rn-carousel-auto-slide="4" rn-carousel-indicator='true' rn-carousel-transition='fade'>
+		<div class="clear:both;"></div>
+		<ul rn-carousel rn-carousel-auto-slide="8" rn-carousel-indicator='true' rn-carousel-transition='fade'>
 			<li ng-repeat="msg in messages">
 				<div>
 					<h1>{{msg.Title}}</h1>
