Added league link to forum theme
Moved mod/admin links to the footer

--- a/forum-theme/kib/template/overall_footer.html
+++ b/forum-theme/kib/template/overall_footer.html
@@ -22,7 +22,11 @@
 	<div class="copyright">
 		<!-- IF TRANSLATION_INFO --><br />{TRANSLATION_INFO}<!-- ENDIF -->
 		<!-- IF DEBUG_OUTPUT --><br />{DEBUG_OUTPUT}<!-- ENDIF -->
+		<!-- IF U_RESTORE_PERMISSIONS -->
+            	<br /><a href="{U_RESTORE_PERMISSIONS}"><span>{L_RESTORE_PERMISSIONS}</span></a>
+         <!-- ENDIF -->
 		<!-- IF U_ACP --><br /><strong><a href="{U_ACP}">{L_ACP}</a></strong><!-- ENDIF -->
+		<!-- IF U_MCP --><br /><strong><a href="{U_MCP}">{L_MCP}</a></strong><!-- ENDIF -->
 	</div>
 </div>
 
