--- a/forum-theme/kib/template/overall_header.html
+++ b/forum-theme/kib/template/overall_header.html
@@ -122,7 +122,7 @@
 					<a href="/#/events">Eventkalender</a>
 				</li>
 				<li>
-					<a href="#/leagues">Ligor</a>
+					<a href="/#/leagues">Ligor</a>
 				</li>
 			</ul>
 			
