--- a/pageroot/css/slide.css
+++ b/pageroot/css/slide.css
@@ -15,6 +15,7 @@
 	z-index:2;
 	position:relative;
 	top:-480px;
+	border:2px solid #707969;
 }
 
 #slidecenter ul li {
@@ -30,7 +31,7 @@ bg-video {
 	z-index:1;
 	display:block;
 	height:480px;
-	width:720px;
+	width:1024px;
 }
 
 bg-video video {
