--- a/forum-theme/kib/template/overall_header.html
+++ b/forum-theme/kib/template/overall_header.html
@@ -109,7 +109,7 @@
     
 	<div class="centerbox" id="header">
 				<a href="/#">
-<img src="/media/new-logo.jpg" style="height:148px;"/></a>
+<img src="/media/new-logo.jpg" style="height:148px;margin-top:2px;"/></a>
 	</div>
 	
 	<div class="widebox" id="menubarcontainer">
