Added proper images to startpage
TODO: Get releases if they end up getting used

--- a/pageroot/css/page.css
+++ b/pageroot/css/page.css
@@ -57,6 +57,7 @@ img {
 	border:1px solid #707969;
 	height:300px;
 	margin-bottom:30px;
+	padding:5px;
 	
 	background-position:center;
 	background-repeat:no-repeat;
