--- a/pageroot/templates/startPageTemplate.html
+++ b/pageroot/templates/startPageTemplate.html
@@ -20,11 +20,11 @@
 
 <div id="imagegrid" class="centerbox">
 	<div class="imageboxleft imagebox" style="text-align:center;">
-		<img src="media/imageplaceholder.png" style="height:300px;"></img>
+		<img src="http://i35.photobucket.com/albums/d183/kin29rob/Undead%2040k/julmys_7_zps91be45f9.jpg" style="height:290px;"></img>
 	</div>
 	
 	<div class="imageboxright imagebox" style="text-align:center;">
-		<img src="media/imageplaceholder.png" style="height:300px;"></img>
+		<img src="http://i329.photobucket.com/albums/l398/BeachHead79/FlamesOfWar/ardenner4.jpg" style="height:290px;"></img>
 	</div>
 	<div class="clear"></div>
 </div>
