Base path to link from forum to web page now uses full domain

--- a/forum-theme/kib/template/overall_header.html
+++ b/forum-theme/kib/template/overall_header.html
@@ -108,21 +108,21 @@
 	<a id="top" name="top" accesskey="t"></a>
     
 	<div class="centerbox" id="header">
-				<a href="/#">
-<img src="/media/new-logo.jpg" style="height:148px;margin-top:2px;"/></a>
+				<a href="http://konfliktspeliborlange.se/#">
+<img src="http://konfliktspeliborlange.se/media/new-logo.jpg" style="height:148px;margin-top:2px;"/></a>
 	</div>
 	
 	<div class="widebox" id="menubarcontainer">
 		<div class="centerbox" id="menubar" style="text-align:left;">
 			<ul style="float:left;">
 				<li>
-					<a href="/#/gallery">Bildgalleri</a>
+					<a href="http://konfliktspeliborlange.se/#/gallery">Bildgalleri</a>
 				</li>
 				<li>
-					<a href="/#/events">Eventkalender</a>
+					<a href="http://konfliktspeliborlange.se/#/events">Eventkalender</a>
 				</li>
 				<li>
-					<a href="/#/leagues">Ligor</a>
+					<a href="http://konfliktspeliborlange.se/#/leagues">Ligor</a>
 				</li>
 			</ul>
 			
