--- a/pageroot/admin/templates/adminIndex.html
+++ b/pageroot/admin/templates/adminIndex.html
@@ -52,6 +52,20 @@
 				</div>
 			</div>
 		</div>
+		<div class="row" ng-hide="auth.authlevel == 1">
+			<div class="col-md-4">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						Leagues
+					</div>
+					<div class="panel-body">
+						<div class="list-group" style="text-align:center;">
+							<a href="#/admin/league" class="list-group-item">Add / Administer leagues</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
 
