--- a/pageroot/admin/templates/adminIndex.html
+++ b/pageroot/admin/templates/adminIndex.html
@@ -60,7 +60,7 @@
 					</div>
 					<div class="panel-body">
 						<div class="list-group" style="text-align:center;">
-							<a href="#/admin/league" class="list-group-item">Add / Administer leagues</a>
+							<a href="#/admin/leagues" class="list-group-item">Add / Administer leagues</a>
 						</div>
 					</div>
 				</div>
