New Galery design

--- a/pageroot/templates/galleryPageTemplate.html
+++ b/pageroot/templates/galleryPageTemplate.html
@@ -1,7 +1,74 @@
 <div id="gallerypagebody">
-	<gallery-row images="images" name="Test Gallery"></gallery-row>
+	<div class="galleryrowholder">
+		<div class="centerbox">
+			<h1 style="text-align:center;color:white;">Pics of fame</h1>
+		</div>
+	</div>
 
-	<gallery-row images="images2" name="Test Gallery 2"></gallery-row>
+	<gallery-row images="images" name="Senaste bilder"></gallery-row>
 
-	<gallery-row images="images3" name="Test Gallery 3"></gallery-row>
+	<div class="gallerytags jumbotron centerbox">
+		<ul class="list-inline">
+			<li style="font-size:30px;">40k</li>
+			<li style="font-size:20px;">flames of war</li>
+			<li style="font-size:15px;">infinty</li>
+			<li style="font-size:15px;">turneringar</li>
+			<li style="font-size:25px;">warmahordes</li>
+			<li style="font-size:20px;">magic</li>
+			<li style="font-size:15px;">malifaoux</li>
+						<li style="font-size:30px;">40k</li>
+			<li style="font-size:20px;">flames of war</li>
+			<li style="font-size:15px;">infinty</li>
+			<li style="font-size:15px;">turneringar</li>
+			<li style="font-size:25px;">warmahordes</li>
+			<li style="font-size:20px;">magic</li>
+			<li style="font-size:15px;">malifaoux</li>
+						<li style="font-size:30px;">40k</li>
+			<li style="font-size:20px;">flames of war</li>
+			<li style="font-size:15px;">infinty</li>
+			<li style="font-size:15px;">turneringar</li>
+			<li style="font-size:25px;">warmahordes</li>
+			<li style="font-size:20px;">magic</li>
+			<li style="font-size:15px;">malifaoux</li>
+						<li style="font-size:30px;">40k</li>
+			<li style="font-size:20px;">flames of war</li>
+			<li style="font-size:15px;">infinty</li>
+			<li style="font-size:15px;">turneringar</li>
+			<li style="font-size:25px;">warmahordes</li>
+			<li style="font-size:20px;">magic</li>
+			<li style="font-size:15px;">malifaoux</li>
+						<li style="font-size:30px;">40k</li>
+			<li style="font-size:20px;">flames of war</li>
+			<li style="font-size:15px;">infinty</li>
+			<li style="font-size:15px;">turneringar</li>
+			<li style="font-size:25px;">warmahordes</li>
+			<li style="font-size:20px;">magic</li>
+			<li style="font-size:15px;">malifaoux</li>
+						<li style="font-size:30px;">40k</li>
+			<li style="font-size:20px;">flames of war</li>
+			<li style="font-size:15px;">infinty</li>
+			<li style="font-size:15px;">turneringar</li>
+			<li style="font-size:25px;">warmahordes</li>
+			<li style="font-size:20px;">magic</li>
+			<li style="font-size:15px;">malifaoux</li>
+						<li style="font-size:30px;">40k</li>
+			<li style="font-size:20px;">flames of war</li>
+			<li style="font-size:15px;">infinty</li>
+			<li style="font-size:15px;">turneringar</li>
+			<li style="font-size:25px;">warmahordes</li>
+			<li style="font-size:20px;">magic</li>
+			<li style="font-size:15px;">malifaoux</li>
+						<li style="font-size:30px;">40k</li>
+			<li style="font-size:20px;">flames of war</li>
+			<li style="font-size:15px;">infinty</li>
+			<li style="font-size:15px;">turneringar</li>
+			<li style="font-size:25px;">warmahordes</li>
+			<li style="font-size:20px;">magic</li>
+			<li style="font-size:15px;">malifaoux</li>
+		</ul>
+	</div>
+	
+	<!--<gallery-row images="images2" name="Test Gallery 2"></gallery-row>
+
+	<gallery-row images="images3" name="Test Gallery 3"></gallery-row>-->
 </div>
