--- a/pageroot/templates/startPageTemplate.html
+++ b/pageroot/templates/startPageTemplate.html
@@ -1,4 +1,4 @@
-<div id="slidecontainer">
+<div id="slidecontainer" class="visible-md-block visible-lg-block">
 	<div class="centerbox" id="slidecenter">
 		<bg-video videos="videos"></bg-video>
 		<div class="clear:both;"></div>
@@ -18,13 +18,15 @@
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae pulvinar augue, vel faucibus elit. Maecenas semper lacinia diam. Suspendisse vel sem purus. Cras luctus commodo dolor, sed feugiat lacus aliquam non. Nullam quis lobortis ipsum, at tempus erat. Fusce porta sapien sit amet lorem porta, at accumsan risus auctor. Nullam sit amet magna non nunc ultrices mollis. Integer venenatis neque id neque scelerisque, quis faucibus nisl tincidunt. Integer mollis nisi ut nibh congue ultrices. Cras placerat sit amet libero in posuere. Ut id odio accumsan, cursus mauris eleifend, pulvinar metus. Proin ultrices hendrerit aliquam. Morbi consequat, justo a porttitor egestas, diam eros gravida neque, sit amet condimentum enim dui nec diam. In in nisi ac augue vulputate ultrices porta sed erat. In tempor suscipit lacus quis lacinia.</p>
 </div>
 
-<div id="imagegrid" class="centerbox">
-	<div class="imageboxleft imagebox" style="text-align:center;">
-		<img src="http://i35.photobucket.com/albums/d183/kin29rob/Undead%2040k/julmys_7_zps91be45f9.jpg" style="height:290px;"></img>
+<div class="container-fluid">
+	<div id="imagegrid" class="centerbox row" class="">
+		<div class="imagebox col-md-6">
+			<img src="http://i35.photobucket.com/albums/d183/kin29rob/Undead%2040k/julmys_7_zps91be45f9.jpg" class="thumbnail"></img>
+		</div>
+		
+		<div class="imagebox col-md-6">
+			<img src="http://i329.photobucket.com/albums/l398/BeachHead79/FlamesOfWar/ardenner4.jpg" class="thumbnail"></img>
+		</div>
+		<div class="clear"></div>
 	</div>
-	
-	<div class="imageboxright imagebox" style="text-align:center;">
-		<img src="http://i329.photobucket.com/albums/l398/BeachHead79/FlamesOfWar/ardenner4.jpg" style="height:290px;"></img>
-	</div>
-	<div class="clear"></div>
 </div>
