Added some initial start page text

--- a/pageroot/templates/startPageTemplate.html
+++ b/pageroot/templates/startPageTemplate.html
@@ -5,17 +5,43 @@
 		<ul rn-carousel rn-carousel-auto-slide="8" rn-carousel-indicator='true' rn-carousel-transition='fade'>
 			<li>
 				<div>
-					<h1></h1>
-					<p></p>
+					<h1>Fantastisk stämning</h1>
+					<p>Att åka in för att spela och umgås känns aldrig jobbigt då man vet att man alltid kommer ha det trevligt! Här haglar skämten tätt och diskussionerna flödar!</p>
 				</div>
-			</li> 
+			</li>
+			<li>
+			  <div>
+			    <h1>Bra spelklimat</h1>
+			    <p>Hos oss finns inga dåliga förlorare! Poängen med varje match är att ha det trevligt och inte att förnedra sin motståndare. Där med inte sagt att det inte förkommer visst mått av cheesande från vissa personer (ni vet vilka ni är), men det är en del av spelet ;) </p>
+			    </div>
+			</li>
+			<li>
+			  <div>
+			    <h1>Kunnigt folk</h1>
+			    <p>Funderar du på hur du bäst målar din nya modell, eller behöver du kanske hjälp med hur du ska spela för bästa resultat? Här finns det alltid kunniga människor att fråga, folk som målar som gudar eller spelar som rockstjärnor</p>
+			  </div>
+			</li>
+				<li>
+			  <div>
+			    <h1>Oväntad bonus</h1>
+			    <p>Öhm… we got candy ;)</p>
+			  </div>
+			</li>
 		</ul>
 	</div>
 </div>
 
 <div class="centerbox textbox">
-	<h1>Lorem ipsum</h1>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae pulvinar augue, vel faucibus elit. Maecenas semper lacinia diam. Suspendisse vel sem purus. Cras luctus commodo dolor, sed feugiat lacus aliquam non. Nullam quis lobortis ipsum, at tempus erat. Fusce porta sapien sit amet lorem porta, at accumsan risus auctor. Nullam sit amet magna non nunc ultrices mollis. Integer venenatis neque id neque scelerisque, quis faucibus nisl tincidunt. Integer mollis nisi ut nibh congue ultrices. Cras placerat sit amet libero in posuere. Ut id odio accumsan, cursus mauris eleifend, pulvinar metus. Proin ultrices hendrerit aliquam. Morbi consequat, justo a porttitor egestas, diam eros gravida neque, sit amet condimentum enim dui nec diam. In in nisi ac augue vulputate ultrices porta sed erat. In tempor suscipit lacus quis lacinia.</p>
+	<h1>Hej, och välkommen till KiB!</h1>
+	<p>...eller “Konfliktspel i Borlänge” om du nu så vill. Vi är en ideel förening placerad centralt i Dalarna, i Borlänge närmare bestämt (namnet spoilar det lite…). </p>
+
+<p>Ordförande hälsar välkommen</p>
+
+<p>Här spelas det Warhammer 40k, Infinity, Flames of war, Warmachine & Hordes, Magic och om någon tar med sig ett brädspel av något slag så är det stor chans att det spelas med. </p>
+
+<p>Föreningens existens (om än inte nödvändigtvis i nuvarande form) sträcker sig tillbaka till xxxx då några få dedikerade drog igång spelandet i Bridgens Hus (Borlänge). Fler spelsugna, erfarna som nybörjare, drog sig dit och succén var ett faktum. Om man bortser från från ett år där i mitten då vi nyttjade en annan lokal så har vi sedan starten hållit spelandet på Bridgens vid liv!</p>
+
+<p>Låter det intressant? Kom gärna förbi någon gång, vi spelar i regel varje fredag kväll. Om inte annat så titta gärna runt på sidan och åter igen välkommen!</p>
 </div>
 
 <div class="container-fluid">
